unpackaged/main/default/objects/SBQQ__Quote__c/fields/SBQQ__Source__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source of cloned quote.</description>
    <inlineHelpText>Source of cloned quote. If cloned, this references the original quote cloned.</inlineHelpText>
    <label>Source</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Quotes (Source)</relationshipLabel>
    <relationshipName>Clones</relationshipName>
    <type>Lookup</type>
</CustomField>