unpackaged/main/default/objects/SBQQ__Quote__c/fields/SBQQ__Status__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Status__c</fullName>
    <description>Status indicating where quote is in its lifecycle.</description>
    <inlineHelpText>Draft: No Quote Lines on Quote;     Approved: Pricing is Approved on all Quote Lines;     In Review: A Discount or Trade-in requires approval;     Rejected: Discount was Rejected. New Discount needs to be submitted;     Presented: RBO has been Sent to Customer, is not yet signed;     Accepted: Quote has a signed RBO;     Closed Lost: Deal is lost</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Presented</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>