unpackaged/main/default/objects/SBQQ__Quote__c/fields/SBQQ__TargetCustomerAmount__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TargetCustomerAmount__c</fullName>
    <description>Customer amount to be targeted in calculating additional discounts.</description>
    <inlineHelpText>Enter desired customer amount to automatically calculate additional discount on discountable line items.</inlineHelpText>
    <label>Target Customer Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>