unpackaged/main/default/objects/SBQQ__Quote__c/fields/Send_RBO_Formula__c.field-meta.xml
<CustomField>
    <fullName>Send_RBO_Formula__c</fullName>
    <formula>OR(

AND(
ISPICKVAL(SBQQ__Type__c, 'Sale'),
Quote_Line_with_Inactive_Product__c = 0,
Unapproved_QL__c = 0,
NOT(ISPICKVAL(SBQQ__Account__r.Type, 'Pending Approval')),
NOT(ISPICKVAL(SBQQ__Status__c, 'Closed Lost')),
X0_dollar_lines__c  = 0,
Status_Approved_Presented__c = True,
Quote_Expired__c = False,
IF(NOT(ISBLANK(Quote_Request__c)), ISPICKVAL(Quote_Request__r.Quote_Status__c, 'Complete'), True) 
),

AND(
ISPICKVAL(SBQQ__Type__c, 'Sale'),
Quote_Line_with_Inactive_Product__c = 0,
Unapproved_QL__c = 0,
NOT(ISPICKVAL(SBQQ__Account__r.Type, 'Pending Approval')),
NOT(ISPICKVAL(SBQQ__Status__c, 'Closed Lost')),
X0_dollar_lines__c  = 0,
ISPICKVAL(SBQQ__Status__c, 'Accepted'),
Quote_Expired__c = False,
IF(NOT(ISBLANK(Quote_Request__c)), ISPICKVAL(Quote_Request__r.Quote_Status__c, 'Complete'), True) 
),

AND(
ISPICKVAL(SBQQ__Type__c, 'Sale'),
Quote_Line_with_Inactive_Product__c = 0,
Unapproved_QL__c = 0,
NOT(ISPICKVAL(SBQQ__Account__r.Type, 'Pending Approval')),
NOT(ISPICKVAL(SBQQ__Status__c, 'Closed Lost')),
X0_dollar_lines__c  = 0,
ISPICKVAL(SBQQ__Status__c, 'Accepted'),
Quote_Expired__c = True,
IF(NOT(ISBLANK(Quote_Request__c)), ISPICKVAL(Quote_Request__r.Quote_Status__c, 'Complete'), True) 
)


)</formula>
    <label>Send RBO Formula</label>
    <type>Checkbox</type>
</CustomField>