unpackaged/main/default/objects/SBQQ__Quote__c/fields/Specs_Additional_Items_Needed_Notes__c.field-meta.xml
<CustomField>
    <fullName>Specs_Additional_Items_Needed_Notes__c</fullName>
    <label>Specs, Additional Items Needed, &amp; Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>