unpackaged/main/default/objects/SBQQ__Quote__c/fields/SR_Mgr_Email__c.field-meta.xml
<CustomField>
    <fullName>SR_Mgr_Email__c</fullName>
    <formula>SBQQ__SalesRep__r.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR Mgr Email</label>
    <type>Text</type>
</CustomField>