unpackaged/main/default/objects/SBQQ__Quote__c/fields/Status_Approved_Presented__c.field-meta.xml
<CustomField>
    <fullName>Status_Approved_Presented__c</fullName>
    <formula>OR(ISPICKVAL(SBQQ__Status__c, 'Approved'), ISPICKVAL(SBQQ__Status__c, 'Presented'))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status = Approved/Presented</label>
    <type>Checkbox</type>
</CustomField>