unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tampa_Location__c.field-meta.xml
<CustomField>
    <fullName>Tampa_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tampa Location</label>
    <type>Checkbox</type>
</CustomField>