unpackaged/main/default/objects/SBQQ__Quote__c/fields/Texas_Count__c.field-meta.xml
<CustomField>
    <fullName>Texas_Count__c</fullName>
    <label>Texas Count</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLineGroup__c.State__c</field>
        <operation>equals</operation>
        <value>TX</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLineGroup__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>