unpackaged/main/default/objects/SBQQ__Quote__c/fields/Texas_RBO__c.field-meta.xml
<CustomField>
    <fullName>Texas_RBO__c</fullName>
    <formula>AND( OR(Trailer_Truck__c, Used_Truck__c), OR( Texas_Count__c &gt; 0, AND(Florida_Count__c = 0, SBQQ__ShippingState__c = 'TX')))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Texas RBO</label>
    <type>Checkbox</type>
</CustomField>