unpackaged/main/default/objects/SBQQ__Quote__c/fields/Title_Location__c.field-meta.xml
<CustomField>
    <fullName>Title_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Address used for the Title of the trucks on this Quote. Default is the Account's Billing Address</inlineHelpText>
    <label>Title Address</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Title Address must be an additional address with type Title and must be related to the same account on this Quote.</errorMessage>
        <filterItems>
            <field>Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.SBQQ__Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Address__c.AddressType__c</field>
            <operation>equals</operation>
            <value>Title</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>