unpackaged/main/default/objects/SBQQ__Quote__c/fields/Title_Name__c.field-meta.xml
<CustomField>
    <fullName>Title_Name__c</fullName>
    <formula>IF(Financial_Company__c = "", SBQQ__Account__r.Name ,Financial_Company__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title Name</label>
    <type>Text</type>
</CustomField>