unpackaged/main/default/objects/SBQQ__Quote__c/fields/Total_Act_QL_Amt__c.field-meta.xml
<CustomField>
    <fullName>Total_Act_QL_Amt__c</fullName>
    <description>Rollup summary of all Open/Won quote lines. Does not include quote lines marked Closed Lost.</description>
    <label>Total Act QL Amount</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetPrice__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Unit_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>