unpackaged/main/default/objects/SBQQ__Quote__c/fields/Total_Inventory_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Inventory_Units__c</fullName>
    <label>Total Inventory Units</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Type__c</field>
        <operation>equals</operation>
        <value>Inventory, Package</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>