unpackaged/main/default/objects/SBQQ__Quote__c/fields/Total_Rental_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Rental_Amount__c</fullName>
    <label>Total Rental Amount</label>
    <summarizedField>SBQQ__QuoteLine__c.Total_Rental_Price__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>