unpackaged/main/default/objects/SBQQ__Quote__c/fields/Total_Rental_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Rental_Units__c</fullName>
    <label>Total Rental Units</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Total_Rental_Price__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>