unpackaged/main/default/objects/SBQQ__Quote__c/fields/Trade_In__c.field-meta.xml
<CustomField>
    <fullName>Trade_In__c</fullName>
    <formula>Trade_In_Approved__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade-In</label>
    <type>Checkbox</type>
</CustomField>