unpackaged/main/default/objects/SBQQ__Quote__c/fields/Trade_In_Approved__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Approved__c</fullName>
    <label>Trade-In Approved</label>
    <summaryFilterItems>
        <field>Trade_In__c.Approved__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Trade_In__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>