unpackaged/main/default/objects/SBQQ__Quote__c/fields/Trade_In_Count__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Count__c</fullName>
    <label>Trade-In Count</label>
    <summaryForeignKey>Trade_In__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>