unpackaged/main/default/objects/SBQQ__Quote__c/fields/Trade_In_Pending__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Pending__c</fullName>
    <label>Trade-In Pending</label>
    <summaryFilterItems>
        <field>Trade_In__c.Pending__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Trade_In__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>