unpackaged/main/default/objects/SBQQ__Quote__c/fields/Trailer_Truck__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Truck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trailer Truck</label>
    <type>Checkbox</type>
</CustomField>