unpackaged/main/default/objects/SBQQ__Quote__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
                <default>true</default>
                <label>New Business</label>
            </value>
            <value>
                <fullName>Existing Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>