unpackaged/main/default/objects/SBQQ__Quote__c/fields/Type_of_Approval__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Approval__c</fullName>
    <formula>IF( OR(LEFT(LastModifiedBy.UserRole.Name, 2) = 'VP', LEFT(LastModifiedBy.UserRole.Name, 2) = 'SM', LEFT(LastModifiedBy.UserRole.Name, 2) = 'Dir'), 'Sales Manager', 
IF( OR(LEFT(LastModifiedBy.UserRole.Name, 2) = 'SR', LEFT(LastModifiedBy.UserRole.Name, 2) = 'SC'), 'Sales Rep', 
IF( OR(LEFT(SBQQ__SalesRep__r.UserRole.Name, 2) = 'VP', LEFT(SBQQ__SalesRep__r.UserRole.Name, 2) = 'SM', LEFT(SBQQ__SalesRep__r.UserRole.Name, 2) = 'Dir'), 'Sales Manager', 
IF( OR(LEFT(SBQQ__SalesRep__r.UserRole.Name, 2) = 'SR', LEFT(SBQQ__SalesRep__r.UserRole.Name, 2) = 'SC'), 'Sales Rep', 'Sales Rep'))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Approval</label>
    <type>Text</type>
</CustomField>