unpackaged/main/default/objects/SBQQ__Quote__c/fields/Unapproved_QL__c.field-meta.xml
<CustomField>
    <fullName>Unapproved_QL__c</fullName>
    <label>Unapproved QL</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Approved__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>