unpackaged/main/default/objects/SBQQ__Quote__c/fields/Used_Truck__c.field-meta.xml
<CustomField>
    <fullName>Used_Truck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used Truck</label>
    <type>Checkbox</type>
</CustomField>