unpackaged/main/default/objects/SBQQ__Quote__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <formula>IF($User.CPQ_Pricing_Edit__c = TRUE,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User</label>
    <type>Checkbox</type>
</CustomField>