unpackaged/main/default/objects/SBQQ__Quote__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utility</label>
    <type>Checkbox</type>
</CustomField>