unpackaged/main/default/objects/SBQQ__Quote__c/fields/WarrantyOptions__c.field-meta.xml
<CustomField>
    <fullName>WarrantyOptions__c</fullName>
    <label>Warranty Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>