unpackaged/main/default/objects/SBQQ__Quote__c/fields/X0_dollar_lines__c.field-meta.xml
<CustomField>
    <fullName>X0_dollar_lines__c</fullName>
    <description>Used to prevent an RBO from being generated when there are lines without prices.</description>
    <label>0 dollar lines</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__NetPrice__c</field>
        <operation>equals</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>