unpackaged/main/default/objects/SBQQ__Quote__c/recordTypes/RBO.recordType-meta.xml
<RecordType>
    <fullName>RBO</fullName>
    <active>true</active>
    <label>RBO</label>
</RecordType>