unpackaged/main/default/objects/SBQQ__Quote__c/recordTypes/Unapproved.recordType-meta.xml
<RecordType>
    <fullName>Unapproved</fullName>
    <active>true</active>
    <label>Draft</label>
</RecordType>